--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "server/server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server/server.js",
-    "build": "npm run build --prefix client "
+    "start": "node server/server.js"
+ 
   },
   "author": "",
   "license": "ISC",
